Another wrong markup.

--- a/Documentation.html
+++ b/Documentation.html
@@ -4360,7 +4360,7 @@ chmod o+rwx tmp
     <code>po/LANG_CODE.po</code> for your language (you can use
     <code>msginit -i po/phpmyadmin.pot -l LANG_CODE --no-translator -o po/LANG_CODE.po</code>
     to do this) or ask on mailing list to add the translation to the web
-    interface. More details are available on <a href="http://wiki.phpmyadmin.net/pma/Devel:Gettext_for_translators">our wiki</a>.</p>
+    interface. More details are available on <a href="http://wiki.phpmyadmin.net/pma/Devel:Gettext_for_translators">our wiki</a>.
 </p>
 <p>
     Please note that we try not to use HTML entities like &amp;eacute; in
