Remove reference to language file.

--- a/Documentation.html
+++ b/Documentation.html
@@ -2547,12 +2547,7 @@ setfacl -d -m "g:www-data:rwx" tmp
 
 <p> Please see the libraries/transformations/TEMPLATE file for adding your own transform
     function. See the libraries/transformations/TEMPLATE_MIMETYPE for adding a mimetype
-    without a transform function. Also note the introduction of a function description in
-    the language files. For each function a $strTransformation_[filename without .inc.php]
-    has to exist.</p>
-
-<p> You can use the template generator to generate new functions and entries in the
-    language file.</p>
+    without a transform function.</p>
 
 <p> To create a new transform function please see
     <tt>libraries/transformations/template_generator.sh</tt>.
