--- a/Documentation.html
+++ b/Documentation.html
@@ -3528,7 +3528,7 @@ have either the <a href="http://pecl.php.net/package/APC">APC</a> extension
 <h4 id="faq3_15">
     <a href="#faq3_15">3.15 When I import an Excel spreadsheet, some cells with calculations do not display correctly.</a></h4>
 <p>
-    phpMyAdmin uses the <a href="http://www.codeplex.com/PHPExcel/" target="_blank">PHPExcel</a> library to parse Excel XLS and XLSX spreadsheets. 
+    phpMyAdmin uses the <a href="http://www.codeplex.com/PHPExcel/">PHPExcel</a> library to parse Excel XLS and XLSX spreadsheets. 
     Therefore, any limitations that are listed on their page regarding Excel calculations will also apply here.
     <br /><br />
     PHPExcel will be kept up to date so as to make all improvements available to phpMyAdmin users.
