FAQ 7.1 forum link
Tiny improvement; link directly to the forum instead of the main
sourceforge page.

--- a/Documentation.html
+++ b/Documentation.html
@@ -4344,8 +4344,9 @@ chmod o+rwx tmp
     under the Bugs section.<br /><br />
 
     But please first discuss your bug with other users:<br />
-    <a href="http://sf.net/projects/phpmyadmin/">
-        http://sf.net/projects/phpmyadmin/</a> (and choose Forums)</p>
+    <a href="https://sourceforge.net/projects/phpmyadmin/forums">
+    https://sourceforge.net/projects/phpmyadmin/forums</a>.
+</p>
 
 <h4 id="faq7_2">
     <a href="#faq7_2">7.2 I want to translate the messages to a new language or upgrade an
