FAQ 7.2 translation additions
This adds a section about documentation translation.

The text was taken from the PMA website.

--- a/Documentation.html
+++ b/Documentation.html
@@ -4379,6 +4379,18 @@ chmod o+rwx tmp
     list, because this is where we ask for translations of new messages.
 </p>
 
+<p>
+    Documentation is being translated using po4a and gettext (see 
+    <a href="http://www.phpmyadmin.net/home_page/docs.php">documentation</a>
+    for existing translations). To start, checkout
+    <a href="http://phpmyadmin.git.sourceforge.net/git/gitweb.cgi?p=phpmyadmin/localized_docs;a=tree;f=po"<code>localized_docs/po</code></a>
+    from Git, or just go to the <a href="https://l10n.cihar.com/projects/pmadoc/">translation server</a>
+    and translate it online. If your language is missing, just contact
+    <a href="mailto:michal@cihar.com">Michal Čihař</a>; he will add it. If
+    you prefer to directly translate the po files, please put updated ones into our
+    <a href="https://sourceforge.net/tracker/?group_id=23067&amp;atid=387645">translation tracker</a>. 
+</p>
+
 <h4 id="faq7_3">
     <a href="#faq7_3">7.3 I would like to help out with the development of
     phpMyAdmin. How should I proceed?</a></h4>
