Documentation: FAQ 7.2 cleanup
Some cleanups for FAQ 7.2

--- a/Documentation.html
+++ b/Documentation.html
@@ -4352,14 +4352,14 @@ chmod o+rwx tmp
     <a href="#faq7_2">7.2 I want to translate the messages to a new language or upgrade an
     existing language, where do I start?</a></h4>
 
-<p> Always use latest Git version of po file to translate. You can optionally
+<p> Always use latest Git version of the po file to translate. You can optionally
     translate online at our <a href="http://l10n.cihar.com/">translation
-    server</a> where you can also get latest po files and merge them
-    with your translations. For creating new translation simply use
+    server</a> where you can also get the latest po files and merge them
+    with your translations. For creating a new translation simply use
     <code>po/phpmyadmin.pot</code> and generate
     <code>po/LANG_CODE.po</code> for your language (you can use
     <code>msginit -i po/phpmyadmin.pot -l LANG_CODE --no-translator -o po/LANG_CODE.po</code>
-    to do this) or ask on mailing list to add the translation to the web
+    to do this) or ask on the mailing list to add the translation to the web
     interface. More details are available on <a href="http://wiki.phpmyadmin.net/pma/Devel:Gettext_for_translators">our wiki</a>.
 </p>
 <p>
@@ -4367,15 +4367,15 @@ chmod o+rwx tmp
     the translations, since we define the right character set in the file.
     With HTML entities, the text on JavaScript messages would not
     display correctly.
-    However there are some entities that need to be there, for quotes,
+    However there are some entities that need to be there: quotes,
     non-breakable spaces, ampersands, less than, greater than.
 </p>
 <p>
     You can then put your translations, as a zip file to avoid losing special
-    characters, on the sourceforge.net translation tracker.
+    characters, on the sourceforge.net <a href="https://sourceforge.net/tracker/?group_id=23067&atid=387645">translation tracker.</a>
 </p>
 <p>
-    It would be a good idea to subscribe to the phpmyadmin-translators mailing
+    It would be a good idea to subscribe to the <a href="https://lists.sourceforge.net/lists/listinfo/phpmyadmin-translators">phpmyadmin-translators</a> mailing
     list, because this is where we ask for translations of new messages.
 </p>
 
