--- a/Documentation.html
+++ b/Documentation.html
@@ -4383,7 +4383,7 @@ chmod o+rwx tmp
     Documentation is being translated using po4a and gettext (see 
     <a href="http://www.phpmyadmin.net/home_page/docs.php">documentation</a>
     for existing translations). To start, checkout
-    <a href="http://phpmyadmin.git.sourceforge.net/git/gitweb.cgi?p=phpmyadmin/localized_docs;a=tree;f=po"<code>localized_docs/po</code></a>
+    <a href="http://phpmyadmin.git.sourceforge.net/git/gitweb.cgi?p=phpmyadmin/localized_docs;a=tree;f=po"><code>localized_docs/po</code></a>
     from Git, or just go to the <a href="https://l10n.cihar.com/projects/pmadoc/">translation server</a>
     and translate it online. If your language is missing, just contact
     <a href="mailto:michal@cihar.com">Michal Čihař</a>; he will add it. If
