removed some messages from messages.inc.php (validation, some other error messages)
User preferences:
added translations and values for some fields
validation for DefaultPropDisplay

--- a/Documentation.html
+++ b/Documentation.html
@@ -2160,7 +2160,7 @@ setfacl -d -m "g:www-data:rwx" tmp
     <dt id="cfg_TitleDatabase">$cfg['TitleDatabase'] string</dt>
     <dt id="cfg_TitleServer">$cfg['TitleServer'] string</dt>
     <dt id="cfg_TitleDefault">$cfg['TitleDefault'] string</dt>
-    <dd>Allows you to specify window's title bar. Following magic string can
+    <dd>Allows you to specify windows' title bar. Following magic strings can
         be used to get special values:
         <dl>
             <dt><code>@HTTP_HOST@</code></dt>
