--- a/Documentation.html
+++ b/Documentation.html
@@ -4381,7 +4381,7 @@ chmod o+rwx tmp
 </p>
 <p>
     You can then put your translations, as a zip file to avoid losing special
-    characters, on the sourceforge.net <a href="https://sourceforge.net/tracker/?group_id=23067&atid=387645">translation tracker.</a>
+    characters, on the sourceforge.net <a href="https://sourceforge.net/tracker/?group_id=23067&amp;atid=387645">translation tracker.</a>
 </p>
 <p>
     It would be a good idea to subscribe to the <a href="https://lists.sourceforge.net/lists/listinfo/phpmyadmin-translators">phpmyadmin-translators</a> mailing
