--- a/Documentation.html
+++ b/Documentation.html
@@ -4855,6 +4855,11 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   <li>Replication support</li>
 </ul></li>
 
+<li>Barrie Leslie
+<ul>
+  <li>BLOBstreaming support with PBMS PHP extension</li>
+</ul></li>
+
 </ul>
 
 <p>
