--- a/Documentation.html
+++ b/Documentation.html
@@ -2021,6 +2021,14 @@ setfacl -d -m "g:www-data:rwx" tmp
         identify what they mean.
     </dd>
 
+    <dt id="cfg_Export">$cfg['Export']['method'] string</dt>
+    <dd>
+        Defines how the export form is displayed when it loads. Valid values are:
+        <li><tt>quick</tt> to display the minimum number of options to configure</li>
+        <li><tt>custom</tt> to display every available option to configure</li>
+        <li><tt>custom-no-form</tt> same as <tt>custom</tt> but does not display the option of using quick export</li>
+    </dd>
+
     <dt id="cfg_Import">$cfg['Import'] array</dt>
     <dd>
         In this array are defined default parameters for import, names of
