--- a/Documentation.html
+++ b/Documentation.html
@@ -4359,6 +4359,11 @@ chmod o+rwx tmp
         <dd>phpMyAdmin with version</dd>
 </dl>
 
+<h4 id="faq6_28">
+    <a href="#faq6_28">6.28 Why can't I get a chart from my query result table?</a></h4>
+
+<p> Not every table can be put to the chart. Only tables with one, two or three columns can be visualised as a chart. Moreover the table must be in a special format for chart script to understand it. Currently supported formats can be found in the <a href="http://wiki.phpmyadmin.net/pma/Devel:Charts#Data_formats_for_query_results_chart">wiki</a>.</p>
+
 <h3 id="faqproject">phpMyAdmin project</h3>
 
 <h4 id="faq7_1">
