credit for user preferences; new terminology (configuration storage)

--- a/Documentation.html
+++ b/Documentation.html
@@ -1155,7 +1155,8 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
         To allow the usage of this functionality:
 
         <ul>
-            <li>set up <a href="#pmadb">pmadb</a> and the linked-tables infrastructure</li>
+            <li>set up <a href="#pmadb">pmadb</a> and the phpMyAdmin
+            configuration storage</li>
             <li>put the table name in <tt>$cfg['Servers'][$i]['userconfig']</tt></li>
         </ul>
     </dd>
@@ -4831,9 +4832,10 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   <li>BLOBstreaming support</li>
 </ul></li>
 
-<li>Piotr Przybylski (Google Summer of Code 2008)
+<li>Piotr Przybylski (Google Summer of Code 2008 and 2010)
 <ul>
   <li>improved setup script</li>
+  <li>user preferences</li>
 </ul></li>
 
 <li>Derek Schaefer (Google Summer of Code 2009)
