--- a/Documentation.html
+++ b/Documentation.html
@@ -4861,6 +4861,11 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   <li>Replication support</li>
 </ul></li>
 
+<li>Muhammad Adnan (Google Summer of Code 2010)
+<ul>
+  <li>Relation schema export to multiple formats</li>
+</ul></li>
+
 <li>Barrie Leslie
 <ul>
   <li>BLOBstreaming support with PBMS PHP extension</li>
