Advanced authentication is gone for ages.

--- a/Documentation.html
+++ b/Documentation.html
@@ -2627,8 +2627,7 @@ setfacl -d -m "g:www-data:rwx" tmp
     <a href="#faq1_5">1.5 Using phpMyAdmin on
     <abbr title="Internet Information Services">IIS</abbr>, I'm facing crashes
     and/or many error messages with the
-    <abbr title="HyperText Transfer Protocol">HTTP</abbr> or advanced authentication
-    mode.</a></h4>
+    <abbr title="HyperText Transfer Protocol">HTTP</abbr>.</a></h4>
 
 <p> This is a known problem with the PHP
     <abbr title="Internet Server Application Programming Interface">ISAPI</abbr>
