--- a/Documentation.html
+++ b/Documentation.html
@@ -2042,7 +2042,7 @@ setfacl -d -m "g:www-data:rwx" tmp
         identify what they mean.
     </dd>
 
-    <dt id="cfg_Export">$cfg['Export']['method'] string</dt>
+    <dt id="cfg_Export_method">$cfg['Export']['method'] string</dt>
     <dd>
         Defines how the export form is displayed when it loads. Valid values are:
         <ul>
