This FAQ is describing some ancient versions.

--- a/Documentation.html
+++ b/Documentation.html
@@ -2674,23 +2674,7 @@ setfacl -d -m "g:www-data:rwx" tmp
 </ul>
 
 <h4 id="faq1_9">
-    <a href="#faq1_9">1.9 I'm having troubles when uploading files. In
-    general file uploads don't work on my system and uploaded files have a
-    <tt>Content-Type:</tt> header in the first line.</a></h4>
-
-<p> It's not really phpMyAdmin related but RedHat 7.0. You have a RedHat 7.0
-    and you updated your PHP RPM to php-4.0.4pl1-3.i386.rpm, didn't you?<br />
-    So the problem is that this package has a serious bug that was corrected
-    ages ago in PHP (2001-01-28: see
-    <a href="http://www.php.net/bugs.php?id=8966">PHP's bug tracking system</a>
-    for more details). The problem is that the bugged package is still
-    available though it was corrected (see
-    <a href="http://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=24933">RedHat's BugZilla</a>
-    for more details).<br />
-    So please download
-    <a href="http://www.redhat.com/swr/i386/php-4.0.4pl1-9.i386.html">the fixed package (4.0.4pl1-9)</a>
-    and the problem should go away.<br />
-    And that fixes the \r\n problem with file uploads!</p>
+    <a href="#faq1_9">1.9 (withdrawn).</a></h4>
 
 <h4 id="faq1_10">
     <a href="#faq1_10">1.10 I'm having troubles when uploading files with
