These refer to no longer existing error message.

--- a/Documentation.html
+++ b/Documentation.html
@@ -2706,20 +2706,10 @@ setfacl -d -m "g:www-data:rwx" tmp
     reset the permissions</a>.</p>
 
 <h4 id="faq1_13">
-    <a href="#faq1_13">1.13 I get an error 'No
-    <abbr title="structured query language">SQL</abbr> query' when trying to
-    execute a bookmark.</a></h4>
-
-<p> If PHP does not have read/write access to its <tt>upload_tmp_dir</tt>, it
-    cannot access the uploaded query.</p>
+    <a href="#faq1_13">1.13 (withdrawn).</a></h4>
 
 <h4 id="faq1_14">
-    <a href="#faq1_14">1.14 I get an error 'No
-    <abbr title="structured query language">SQL</abbr> query' when trying to
-    submit a query from the convenient text area.</a></h4>
-
-<p> Check the <tt>post_max_size</tt> directive from your PHP configuration file
-    and try to increase it.</p>
+    <a href="#faq1_14">1.14 (withdrawn).</a></h4>
 
 <h4 id="faq1_15">
     <a href="#faq1_15">1.15 I have problems with <i>mysql.user</i> column names.</a>
