Grid edit: add configuration to save edited cell(s) at once

--- a/Documentation.html
+++ b/Documentation.html
@@ -2143,6 +2143,11 @@ setfacl -d -m "g:www-data:rwx" tmp
         identify what they mean.
     </dd>
 
+    <dt id="cfg_SaveCellsAtOnce">$cfg['SaveCellsAtOnce'] boolean</dt>
+    <dd>
+        Defines whether or not to save all edited cells at once in browse-mode.
+    </dd>
+
     <dt id="cfg_ShowDisplayDirection">$cfg['ShowDisplayDirection'] boolean</dt>
     <dd>
         Defines whether or not type display direction option is shown
