--- a/Documentation.html
+++ b/Documentation.html
@@ -704,13 +704,12 @@ since this link provides funding for phpMyAdmin.
 
         <tt><i>mysqli</i></tt> :
         The improved MySQL extension. This extension became available
-        with php 5.0.0 and is the recommended way to connect to a server
+        with PHP 5.0.0 and is the recommended way to connect to a server
         running MySQL 4.1.x or newer.</dd>
 
     <dt id="cfg_Servers_compress">$cfg['Servers'][$i]['compress'] boolean</dt>
     <dd>Whether to use a compressed protocol for the MySQL server connection
-        or not (experimental).<br />
-        This feature requires PHP&nbsp;&gt;=&nbsp;4.3.0.</dd>
+        or not (experimental).</dd>
 
     <dt id="controluser">
         <span id="cfg_Servers_controluser">$cfg['Servers'][$i]['controluser']</span> string<br />
@@ -1839,9 +1838,7 @@ $cfg['TrustedProxies'] =
     <dd>Specifies whether GD &gt;= 2 is available. If yes it can be used for
         MIME transformations.<br />
         Possible values are:
-        <ul><li>auto - automatically detect, this is a bit expensive
-                operation for php &lt; 4.3.0 so it is preferred to change this
-                according to your server real possibilities</li>
+        <ul><li>auto - automatically detect</li>
             <li>yes - GD 2 functions can be used</li>
             <li>no - GD 2 function cannot be used</li>
         </ul>
@@ -2673,7 +2670,7 @@ setfacl -d -m "g:www-data:rwx" tmp
     <abbr title="HyperText Transfer Protocol">HTTP</abbr> headers ...&quot;.</a>
 </h4>
 
-<p> You just forgot to read the <i>install.txt</i> file from the php distribution.
+<p> You just forgot to read the <i>install.txt</i> file from the PHP distribution.
     Have a look at the last message in this
     <a href="http://bugs.php.net/bug.php?id=12061">bug report</a> from the
     official PHP bug database.</p>
@@ -2815,7 +2812,7 @@ setfacl -d -m "g:www-data:rwx" tmp
     connect to your MySQL server using PHP's classic
     <a href="http://php.net/mysql">MySQL extension</a> as well as the
     <a href="http://php.net/mysqli">improved MySQL extension (MySQLi)</a> that
-    is available in php 5.0. The latter one should be used unless you have a
+    is available in PHP 5.0. The latter one should be used unless you have a
     good reason not to do so.<br />
     When compiling PHP, we strongly recommend that you manually link the MySQL
     extension of your choice to a MySQL client library of at least the same
@@ -3226,8 +3223,8 @@ the <tt>mysql_upgrade</tt> command on the server.</p>
 <p> Try to set the <a href="#cfg_OBGzip" class="configrule">$cfg['OBGZip']</a>
     directive to <tt>FALSE</tt> in the phpMyAdmin configuration file. It helps
     sometime.<br />
-    Also have a look at your PHP version number: if it contains &quot;4.0b...&quot;
-    it means you're running a beta version of PHP. That's not a so good idea,
+    Also have a look at your PHP version number: if it contains &quot;b&quot; or &quot;alpha&quot;
+    it means you're running a testing version of PHP. That's not a so good idea,
     please upgrade to a plain revision.</p>
 
 <h4 id="faq2_5">
