Withdraw FAQ 1.33 It concerns PHP 5.0.4 only, minimal supported version is now 5.2

--- a/Documentation.html
+++ b/Documentation.html
@@ -3010,11 +3010,7 @@ SetInputFilter PHP
 </ol>
 
 <h4 id="faq1_33">
-    <a href="#faq1_33">1.33 Is there a problem with the mysqli extension when running
-    PHP 5.0.4 on 64-bit systems?</a></h4>
-
-<p> Yes. This problem affects phpMyAdmin (&quot;Call to undefined function
-    pma_reloadnavigation&quot;), so upgrade your PHP to the next version.</p>
+    <a href="#faq1_33">1.33 (withdrawn).</a></h4>
 
 <h4 id="faq1_34">
     <a href="#faq1_34">1.34 Can I access directly to database or table pages?</a></h4>
