mysqli is the recommended extension, not mysql

--- a/Documentation.html
+++ b/Documentation.html
@@ -699,8 +699,7 @@ since this link provides funding for phpMyAdmin.
         <br /><br />
 
         <tt><i>mysql</i></tt> :
-        The classic MySQL extension. This is the recommended and default
-        method at this time.<br /><br />
+        The classic MySQL extension.<br /><br />
 
         <tt><i>mysqli</i></tt> :
         The improved MySQL extension. This extension became available
